# rs-place

./: Cargo.toml
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/.cargo/: config.toml
